<resources>
    <string name="app_name">Budget</string>
    <string name="bnm_1">Record</string>
    <string name="bnm_2">Category</string>
    <string name="bnm_3">Home</string>
    <string name="bnm_4">Report</string>
    <string name="bnm_5">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home"></string>
    <string name="month_selected">Nov 2023</string>
    <string name="cal_num00">00</string>
    <string name="cal_num0">0</string>
    <string name="cal_num1">1</string>
    <string name="cal_num2">2</string>
    <string name="cal_num3">3</string>
    <string name="cal_num4">4</string>
    <string name="cal_num5">5</string>
    <string name="cal_num6">6</string>
    <string name="cal_num7">7</string>
    <string name="cal_num8">8</string>
    <string name="cal_num9">9</string>
    <string name="cal_num_dp">.</string>
    <string name="cal_num_multi">X</string>
    <string name="cal_num_divide">÷</string>
    <string name="cal_num_plus">+</string>
    <string name="cal_num_minus">-</string>
    <string name="cal_num_enter">=</string>
    <string name="cal_num_clear">AC</string>
    <string name="cal_num_delete">Del</string>
    <string name="cal_num_confirm">OK</string>
    <string name="month1_short">Jan</string>
    <string name="month2_short">Feb</string>
    <string name="month3_short">Mar</string>
    <string name="month4_short">Apr</string>
    <string name="month5_short">May</string>
    <string name="month6_short">Jun</string>
    <string name="month7_short">Jul</string>
    <string name="month8_short">Aug</string>
    <string name="month9_short">Sep</string>
    <string name="month10_short">Oct</string>
    <string name="month11_short">Nov</string>
    <string name="month12_short">Dec</string>
    <string name="report_cat_1">Expense</string>
    <string name="report_cat_2">Income</string>
    <string name="report_cat_3">Balance</string>
    <string name="title_category">Categories</string>
    <string name="category_sort_btn_text">Auto Sort</string>
    <string-array name="currency_code">
        <item>HKD</item>
        <item>JPY</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CNY</item>
    </string-array>
</resources>
