<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/miRecord"
        android:title="@string/bnm_1"
        android:icon="@drawable/ic_record_foreground" />
    <item
        android:icon="@drawable/ic_category_foreground"
        android:title="@string/bnm_2"
        android:id="@+id/miCategory" />
    <item
        android:icon="@drawable/ic_home_foreground"
        android:title="@string/bnm_3"
        android:id="@+id/miHome" />
    <item
        android:icon="@drawable/ic_stats_24"
        android:title="@string/bnm_4"
        android:id="@+id/miReport" />
    <item
        android:icon="@drawable/ic_settings_24"
        android:title="@string/bnm_5"
        android:id="@+id/miSettings" />

</menu>