<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <include
        android:id="@+id/header_edit_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_edit_record"
        />

    <LinearLayout
        android:id="@+id/linearBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="320dp"
        android:background="@color/teal_200"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_edit_record">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_clear"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF5722"
                android:text="@string/cal_num_clear"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="allClearAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_delete"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF5722"
                android:text="@string/cal_num_delete"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="backSpaceAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_confirm"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#4CAF50"
                android:text="@string/cal_num_confirm"
                android:textColor="@color/white"
                app:cornerRadius="25dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF9800"
                android:text="@string/cal_num_divide"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="operationAction"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num7"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num8"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num9"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF9800"
                android:text="@string/cal_num_multi"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="operationAction"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num4"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num5"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num6"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF9800"
                android:text="@string/cal_num_minus"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="operationAction"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num1"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num2"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num3"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF9800"
                android:text="@string/cal_num_plus"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="operationAction"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_00"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num00"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num0"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#D5F1FA"
                android:text="@string/cal_num_dp"
                android:textColor="@color/black"
                app:cornerRadius="25dp"
                android:onClick="numberAction"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_num_enter"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="#FF9800"
                android:text="@string/cal_num_enter"
                android:textColor="@color/white"
                app:cornerRadius="25dp"
                android:onClick="equalsAction"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvSolution"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/linearBtnLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="$:"
        app:layout_constraintBottom_toTopOf="@+id/linearBtnLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spCurrency" />

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="77dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:entries="@array/currency_code"
        app:layout_constraintBottom_toTopOf="@+id/linearBtnLayout"
        app:layout_constraintStart_toEndOf="@+id/tvSolution" />


</androidx.constraintlayout.widget.ConstraintLayout>